--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
   </div>
   <footer class="attribution">
     Challenge by
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your
-      Name Here</a>.
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://benhaseep.github.io/">benHaseep</a>.
   </footer>
 </body>
 
